--- a/tests/integration/data/clouds.yaml.tmpl
+++ b/tests/integration/data/clouds.yaml.tmpl
@@ -2,7 +2,7 @@ clouds:
   testcloud:
     auth:
       auth_url: ${auth_url}
-      password: ${$password}
+      password: ${password}
       project_domain_name: ${project_domain_name}
       project_name: ${project_name}
       user_domain_name: ${user_domain_name}
