--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -10,7 +10,8 @@ function configure_proxy() {
         return
     fi
     echo "Installing aproxy"
-    /usr/bin/sudo apt install -yq nftables
+    /usr/bin/sudo apt-get update -y
+    /usr/bin/sudo DEBIAN_FRONTEND=noninteractive apt-get install -yq nftables
     /usr/bin/sudo snap install aproxy --edge;
     /usr/bin/sudo nft -f - << EOF
 define default-ip = $(ip route get $(ip route show 0.0.0.0/0 | grep -oP 'via \K\S+') | grep -oP 'src \K\S+')
