Attempt to fix gh install on focal

--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -2,6 +2,8 @@
 
 set -e
 
+RELEASE=$(lsb_release -a | grep Codename: | awk '{print $2}')
+
 hostnamectl set-hostname github-runner
 
 function configure_proxy() {
@@ -9,6 +11,14 @@ function configure_proxy() {
     if [[ -z "$proxy" ]]; then
         return
     fi
+    
+    if [ $RELEASE == "focal" ]; then
+        echo "Ensure nftables is installed on focal"
+        # Focal does not have nftables install by default. Jammy and onward would not need this.
+        DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get update -y
+        DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get install -y --no-install-recommends nftables
+    fi
+
     echo "Installing aproxy"
     /usr/bin/sudo snap install aproxy --edge;
     /usr/bin/sudo nft -f - << EOF
@@ -36,10 +46,20 @@ EOF
 function install_apt_packages() {
     local packages="$1"
     local hwe_version="$2"
+
+    if [ $RELEASE == focal ]; then
+        mkdir -p -m 755 /etc/apt/keyrings
+        out=$(mktemp)
+        wget -nv -O$out https://cli.github.com/packages/githubcli-archive-keyring.gpg 
+        cat $out | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null 
+	    chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg
+	    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+    fi
+
     echo "Updating apt packages"
     DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get update -y
     echo "Installing apt packages $packages"
-    DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get install -y --no-install-recommends nftables ${packages} 
+    DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get install -y --no-install-recommends ${packages}
     echo "Installing linux-generic-hwe-${hwe_version}"
     DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get install -y --install-recommends linux-generic-hwe-${hwe_version}
 }
@@ -148,8 +168,8 @@ github_runner_arch="{{ RUNNER_ARCH }}"
 script_url="{{ SCRIPT_URL }}"
 script_secrets="{{ SCRIPT_SECRETS }}"
 
-install_apt_packages "$apt_packages" "$hwe_version"
 configure_proxy "$proxy"
+install_apt_packages "$apt_packages" "$hwe_version"
 disable_unattended_upgrades
 enable_network_fair_queuing_congestion
 configure_usr_local_bin
