--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -2,6 +2,8 @@
 
 set -e
 
+RELEASE=$(lsb_release -a | grep Codename: | awk '{print $2}')
+
 hostnamectl set-hostname github-runner
 
 function configure_proxy() {
@@ -9,6 +11,14 @@ function configure_proxy() {
     if [[ -z "$proxy" ]]; then
         return
     fi
+
+    if [ $RELEASE == "focal" ]; then
+        echo "Ensure nftables is installed on focal"
+        # Focal does not have nftables install by default. Jammy and onward would not need this.
+        HTTP_PROXY=${proxy} HTTPS_PROXY=${proxy} NO_PROXY=127.0.0.1,localhost,::1,10.0.0.0/8,172.16.0.0/12,192.168.0.0/1 DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get update -y
+        HTTP_PROXY=${proxy} HTTPS_PROXY=${proxy} NO_PROXY=127.0.0.1,localhost,::1,10.0.0.0/8,172.16.0.0/12,192.168.0.0/1 DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get install -y --no-install-recommends nftables
+    fi
+
     echo "Installing aproxy"
     /usr/bin/sudo snap install aproxy --edge;
     /usr/bin/sudo nft -f - << EOF
@@ -36,6 +46,16 @@ EOF
 function install_apt_packages() {
     local packages="$1"
     local hwe_version="$2"
+
+    # The gh package (GitHub CLI application) is not in the APT repository for focal.
+    # For focal, the apt repository of GitHub is added.
+    if [ $RELEASE == "focal" ]; then
+        mkdir -p -m 755 /etc/apt/keyrings
+        wget -nv -O /etc/apt/keyrings/githubcli-archive-keyring.gpg https://cli.github.com/packages/githubcli-archive-keyring.gpg
+        chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg
+        echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" > /etc/apt/sources.list.d/github-cli.list
+    fi
+
     echo "Updating apt packages"
     DEBIAN_FRONTEND=noninteractive /usr/bin/apt-get update -y
     echo "Installing apt packages $packages"
@@ -128,7 +148,10 @@ install_apt_packages "$apt_packages" "$hwe_version"
 disable_unattended_upgrades
 enable_network_fair_queuing_congestion
 configure_usr_local_bin
-install_yarn
+# The yarn installation does not work for focal.
+if [ $RELEASE != "focal" ]; then
+    install_yarn
+fi
 # install yq with ubuntu user due to GOPATH related go configuration settings
 export -f install_yq
 su ubuntu -c "bash -c 'install_yq'"
