--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -10,8 +10,7 @@ function configure_proxy() {
     local proxy="$1"
 
     echo "Installing aproxy"
-    # We always want snap aproxy and nft to be installed, as it could be used by the runner,
-    # if the runner openstack project requires it.
+    # We always want snap aproxy and nft to be installed, even it they are not used by the image builder.
     /usr/bin/sudo snap install aproxy --edge;
 
     if [ $RELEASE == "focal" ]; then
