--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -11,6 +11,9 @@ function configure_proxy() {
 
     echo "Installing aproxy"
     # We always want snap aproxy and nft (in focal) to be installed, even it they are not used by the image builder.
+    /usr/bin/sudo snap set system proxy.http=${proxy:-}
+    /usr/bin/sudo snap set system proxy.https=${proxy:-}
+    /usr/bin/sudo systemctl restart snapd
     /usr/bin/sudo snap install aproxy --edge;
 
     if [ $RELEASE == "focal" ]; then
