Remove snap proxy config after install

--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -15,6 +15,8 @@ function configure_proxy() {
     /usr/bin/sudo snap set system proxy.https=${proxy:-}
     /usr/bin/sudo systemctl restart snapd
     /usr/bin/sudo snap install aproxy --edge;
+    /usr/bin/sudo snap set system proxy.http=""
+    /usr/bin/sudo snap set system proxy.https=""
 
     if [ $RELEASE == "focal" ]; then
         echo "Ensure nftables is installed on focal"
