--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -8,16 +8,14 @@ hostnamectl set-hostname github-runner
 
 function configure_proxy() {
     local proxy="$1"
-    local proxy_url ="${1:+http://$1}"
+    # local proxy_url ="${1:+http://$1}"
+    local proxy_url ="http://${$1}"
 
     echo "Installing aproxy"
     # We always want snap aproxy and nft (in focal) to be installed, even it they are not used by the image builder.
     /usr/bin/sudo snap set system proxy.http=${proxy_url}
     /usr/bin/sudo snap set system proxy.https=${proxy_url}
-    /usr/bin/sudo systemctl restart snapd
     /usr/bin/sudo snap install aproxy --edge;
-    /usr/bin/sudo snap set system proxy.http=""
-    /usr/bin/sudo snap set system proxy.https=""
 
     if [ $RELEASE == "focal" ]; then
         echo "Ensure nftables is installed on focal"
