--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -8,8 +8,7 @@ hostnamectl set-hostname github-runner
 
 function configure_proxy() {
     local proxy="$1"
-    # local proxy_url ="${1:+http://$1}"
-    local proxy_url ="http://${$1}"
+    local proxy_url="${1:+http://$1}"
 
     echo "Installing aproxy"
     # We always want snap aproxy and nft (in focal) to be installed, even it they are not used by the image builder.
