--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -9,6 +9,14 @@ hostnamectl set-hostname github-runner
 function configure_proxy() {
     local proxy="$1"
     local proxy_url="${1:+http://$1}"
+    
+    echo "Disabling IPv6"
+   /usr/bin/sudo tee /etc/sysctl.d/99-disable-ipv6.conf > /dev/null << EOF
+net.ipv6.conf.all.disable_ipv6 = 1
+net.ipv6.conf.default.disable_ipv6 = 1
+net.ipv6.conf.lo.disable_ipv6 = 1
+EOF 
+    sudo sysctl -p /etc/sysctl.d/99-disable-ipv6.conf
 
     echo "Installing aproxy"
     # We always want snap aproxy and nft (in focal) to be installed, even it they are not used by the image builder.
