Try to disable IPv6 again

--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -32,12 +32,9 @@ function configure_proxy() {
     fi
 
     echo "Disabling IPv6"
-   /usr/bin/sudo tee /etc/sysctl.d/99-disable-ipv6.conf > /dev/null << EOF
-net.ipv6.conf.all.disable_ipv6 = 1
-net.ipv6.conf.default.disable_ipv6 = 1
-net.ipv6.conf.lo.disable_ipv6 = 1
-EOF 
-    sudo sysctl -p /etc/sysctl.d/99-disable-ipv6.conf
+    sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+    sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+    sudo sysctl -w net.ipv6.conf.lo.disable_ipv6=1
 
     echo "Configure nft and aproxy"
     /usr/bin/sudo nft -f - << EOF
