feat: otel-collector snap

--- a/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
+++ b/app/src/github_runner_image_builder/templates/cloud-init.sh.j2
@@ -120,6 +120,12 @@ function install_yq() {
     /usr/bin/snap remove go
 }
 
+function install_opentelemetry_collector_snap() {
+    echo "Installing OpenTelemetry Collector snap"
+    /usr/bin/sudo snap install opentelemetry-collector
+    /usr/bin/sudo snap disable opentelemetry-collector
+}
+
 function install_github_runner() {
     version="$1"
     arch="$2"
